--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 server.port = 8081
+
+#Comentarios con signo #
+
+#Cambiar el formato de fecha en consola
+logging.pattern.dateformat= hh:mm
+
+#Quitar Banner de Spring
+spring.main.banner-mode= off
+
+#Caché: Guardan datos de consumo frecuente
+
+#Eliminar uso de caché
+spring.thymeleaf.cache=false
+
+# Conexión a MySql
+spring.datasource.url=jdbc:mysql://localhost:3304/techshop?usetimezone=true&serverTimezone=UTC
+spring.datasource.username=usuario_prueba
+spring.datasource.password=Usuar1o_Clave.
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# Mostrar información en el log
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.sql=DEBUG
+logging.level.org.type.descriptor.sql.BasicBinder=TRACE
