--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-bom</artifactId>
+            <version>2022.0.3</version>
+            <scope>import</scope>
+            <type>pom</type>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
